# Microservices-Application

./: README.md
business_cluster/file_server/: CMakeLists.txt
business_cluster/file_server/include/: FileServer.h  base.pb.h  file.pb.h
business_cluster/file_server/src/: base.pb.cc  file.pb.cc
business_cluster/file_server/test/: CMakeLists.txt  server.cpp
business_cluster/speech/: speech.pb.cc  speech.pb.h
business_cluster/speech/include/: SpeechServerBuilder.h  SpeechServiceImpl.h
business_cluster/speech/src/: SpeechServiceImpl.hpp
business_cluster/speech_server/: CMakeLists.txt  speech.pb.cc  speech.pb.h
business_cluster/speech_server/include/: SpeechServerBuilder.h  SpeechService.h  speech.pb.h
business_cluster/speech_server/test/: CMakeLists.txt  build.sh  server.cpp
business_cluster/user/include/: user.h
common/amo_etcd/: CMakeLists.txt
common/amo_etcd/include/: amo_etcd.h
common/amo_etcd/test/: CMakeLists.txt  build.sh  discovery_test.cpp  test.cpp  test_amo_etcd
common/logger/: CMakeLists.txt  README.md  build.sh
common/logger/include/: daily_rotating_file_sink.h  logger.h  logger_def.h
common/logger/src/: daily_rotating_file_sink.cpp  logger.cpp  logger.h  logger_def.cpp  logger_def.h  singleton.hpp
common/logger/test/: CMakeLists.txt  logger_test  main.cpp
common/logger/test/logs/: main_logger.txt
common/logger/test/test_logs/: main_logger.txt
common/protobuf/: base.proto  file.proto  notify.proto  speech.proto  user_management.proto
common/speech/: CMakeLists.txt  build.sh
common/speech/include/: speech_recognizer.h
common/speech/test/: CMakeLists.txt  build.sh  test  test.cpp  test_speech
